Fixed text clipping in input

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -179,7 +179,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px 40px;
+    padding: 16px 20px;
 
     form {
       flex-grow: 1;
